--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "myproject",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "faker": "^5.5.2",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
-    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
